# Connect4

./: README.md
client/: pyproject.toml
client/src/connect4_client/: __init__.py  app.py  button.py  command.py  connection.py  message.py
server/: build.sbt
server/src/main/resources/: websocket.html
server/src/main/scala/game/: Game.scala
server/src/main/scala/server/: Server.scala  Session.scala
src/connect4_client/: app.py  message.py
src/main/resources/: hello.html
src/main/scala/game/: Game.scala  Main.scala
src/main/scala/server/: Server.scala  Session.scala
